Improve trigger UI and alias handling

--- a/settings.html
+++ b/settings.html
@@ -106,7 +106,7 @@
                             <table class="cs-table cs-trigger-table">
                                 <thead>
                                     <tr>
-                                        <th>Trigger Name</th>
+                                        <th>Trigger Keywords</th>
                                         <th>Variant Folder</th>
                                         <th>Actions</th>
                                     </tr>
@@ -114,7 +114,7 @@
                                 <tbody id="cs-trigger-table-body"></tbody>
                             </table>
                         </div>
-                        <p class="cs-helper-text">Use <code>/outfitswitch &lt;trigger&gt;</code> in chat to change outfits via slash command.</p>
+                        <p class="cs-helper-text">Use <code>/outfitswitch &lt;trigger&gt;</code> in chat to change outfits via slash command. Each trigger entry accepts multiple keywords separated by commas or new lines.</p>
                     </div>
                 </section>
 
